fixed remove problem